--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.3.0",
@@ -29,6 +30,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lucide-react": "^0.454.0",
     "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,6 +40,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
+    "react-native-vision-camera": "^4.6.0",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "tailwind-react-native-classnames": "^3.0.1",
