--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "rechart": "^0.0.1",
+    "redux-persist": "^6.0.0",
     "tailwind-react-native-classnames": "^3.0.1",
     "victory-native": "^37.3.1"
   },
